--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <h2 class="title title_big home__title">Программы</h2>
               <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
               <ul class="pl-0 mb-5">
-                <li class="d-flex justify-content-between item-programm" data-nameProgramm="Burlesque"><span>Burlesque</span> <span><span class="mr-5 text-crossed">от 12 000 ₽</span><span><b>6 000 ₽</b></span></span></li>
+                <li class="d-flex justify-content-between item-programm item-programm__active" data-nameProgramm="Burlesque"><span>Burlesque</span> <span><span class="mr-5 text-crossed">от 12 000 ₽</span><span><b>6 000 ₽</b></span></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Foamy euphoria"><span>Foamy euphoria</span><span><b>от 1 900 ₽</b></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Treatise of Desires"><span>Treatise of Desires</span><span><b>от 5 600 ₽</b></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Temptation"><span>Temptation</span><span><b>от 3 000 ₽</b></span></li>
@@ -106,9 +106,16 @@
                     на все 100. Начни рабочий день
                     с небольшого отдыха.</p>
                     <div id="description-price">
-                      <p>C 1 девушкой</p>
-                      <p>30 минут</p>
-                      <p>1 900 руб.</p>
+                      <div>
+                        <p>C 1 девушкой</p>
+                        <p>60 минут</p>
+                        <p>5 600 руб.</p>
+                      </div>
+                      <div>
+                        <p>C 1 девушкой</p>
+                        <p>90 минут</p>
+                        <p>6 900 руб.</p>
+                      </div>
                     </div>
                 </div>
                 <button class="btn btn_green mt-5">Записатся</button>
