--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- girl ---------------------------------------->
       <div class="section girl position-relative">
         <div class="slider-girl">
-          <div class="slider-girl__slide"><img src="img/girl/slide-1.png" alt="" class="slide__img" data-boobs="1" data-name="Elizabeth" data-age="20"></div>
+          <div class="slider-girl__slide"><img src="img/girl/1.jpg" alt="" class="slide__img" data-boobs="1" data-name="Elizabeth" data-age="20"></div>
           <div class="slider-girl__slide"><img src="img/girl/slide-1.png" alt="" class="slide__img" data-boobs="2" data-name="Zoya" data-age="30"></div>
           <div class="slider-girl__slide"><img src="img/girl/slide-1.png" alt="" class="slide__img" data-boobs="3" data-name="Nika" data-age="40"></div>
           <div class="slider-girl__slide"><img src="img/girl/slide-1.png" alt="" class="slide__img" data-boobs="3" data-name="Nona" data-age="40"></div>
@@ -83,8 +83,8 @@
             <div class="col-6">
               <h2 class="title title_big home__title">Программы</h2>
               <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
-              <ul class="pl-0 mb-5">
-                <li class="d-flex justify-content-between item-programm item-programm__active" data-nameProgramm="Burlesque"><span>Burlesque</span> <span><span class="mr-5 text-crossed">от 12 000 ₽</span><span><b>6 000 ₽</b></span></span></li>
+              <ul class="pl-0 mb-5 sas">
+                <li class="d-flex justify-content-between item-programm" data-nameProgramm="Burlesque"><span>Burlesque</span> <span><span class="mr-5 text-crossed">от 12 000 ₽</span><span><b>6 000 ₽</b></span></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Foamy euphoria"><span>Foamy euphoria</span><span><b>от 1 900 ₽</b></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Treatise of Desires"><span>Treatise of Desires</span><span><b>от 5 600 ₽</b></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Temptation"><span>Temptation</span><span><b>от 3 000 ₽</b></span></li>
