--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
         <img src="img/logo/logo-header.png" alt="logo" class="logo-img">
       </a>
       <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item text-center active">
-            <a class="nav-link text-white text-white" href="#">Девушки</a>
+        <ul class="navbar-nav" id="sideMenu">
+          <li class="nav-item text-center" data-menuanchor="home">
+            <a class="nav-link text-white" href="#home">Главная</a>
           </li>
-          <li class="nav-item text-center">
+          <li class="nav-item text-center" data-menuanchor="girl">
+            <a class="nav-link text-white" href="#girl">Девушки</a>
+          </li>
+          <li class="nav-item text-center" data-menuanchor="services">
             <a class="nav-link text-white" href="#services">Услуги</a>
           </li>
-          <li class="nav-item text-center">
-            <a class="nav-link text-white" href="#projects">Контакты</a>
+          <li class="nav-item text-center" data-menuanchor="contact">
+            <a class="nav-link text-white" href="#contact">Контакты</a>
           </li>
         </ul>
       </div>
@@ -41,7 +44,7 @@
     </nav>
     <div id="fullpage">
       <!-- home ----------------------------------------->
-      <div class="section home">
+      <div class="section home" data-anchor="home">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -57,7 +60,9 @@
         </div>
       </div>
       <!-- girl ---------------------------------------->
-      <div class="section girl position-relative">
+      <div class="section girl position-relative overflow-hidden" data-anchor="girl">
+        <div class="line line_l"></div>
+        <div class="line line_r"></div>
         <div class="slider-girl">
           <div class="slider-girl__slide"><img src="img/girl/1.jpg" alt="" class="slide__img" data-boobs="1" data-name="Elizabeth" data-age="20"></div>
           <div class="slider-girl__slide"><img src="img/girl/2.jpg" alt="" class="slide__img" data-boobs="2" data-name="Zoya" data-age="30"></div>
@@ -78,9 +83,9 @@
         </div>
       </div>
       <!-- servise ------------------------------------->
-      <div class="section servise">
+      <div class="section servise" data-anchor="servise">
         <div class="container">
-          <div class="row">
+          <div class="row d-none d-xl-flex">
             <div class="col-6">
               <h2 class="title title_big home__title">Программы</h2>
               <h3 class="title text-dark title_medium servise__sub-title mb-5">мужского спа</h3>
@@ -90,15 +95,13 @@
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Treatise of Desires"><span>Treatise of Desires</span><span><b>от 5 600 ₽</b></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Temptation"><span>Temptation</span><span><b>от 3 000 ₽</b></span></li>
                 <li class="d-flex justify-content-between item-programm" data-nameProgramm="Nonrandomness"><span>Nonrandomness</span><span><b>от 4 500 ₽</b></span></li>
-                <div id="close-list" class="d-none">
-                  <li class="d-flex justify-content-between item-programm" data-nameProgramm="Sirens"><span>Sirens</span> <span><span><b>8 000 ₽</b></span></span></li>
-                  <li class="d-flex justify-content-between item-programm" data-nameProgramm="WeAreCrazy"><span>WeAreCrazy</span><span><b>от 10 000 ₽</b></span></li>
-                  <li class="d-flex justify-content-between item-programm" data-nameProgramm="The Taming of the Shrew"><span>The Taming of the Shrew</span><span><b>от 7 600 ₽</b></span></li>
-                  <li class="d-flex justify-content-between item-programm" data-nameProgramm="Infinity"><span>Infinity</span><span><b>от 3 000 ₽</b></span></li>
-                  <li class="d-flex justify-content-between item-programm" data-nameProgramm="Solo"><span>Solo</span><span><b>от 6 500 ₽</b></span></li>
-                </div>
+                <li class="d-flex justify-content-between item-programm" data-nameProgramm="Sirens"><span>Sirens</span> <span><span><b>8 000 ₽</b></span></span></li>
+                <li class="d-flex justify-content-between item-programm" data-nameProgramm="WeAreCrazy"><span>WeAreCrazy</span><span><b>от 10 000 ₽</b></span></li>
+                <li class="d-flex justify-content-between item-programm" data-nameProgramm="The Taming of the Shrew"><span>The Taming of the Shrew</span><span><b>от 7 600 ₽</b></span></li>
+                <li class="d-flex justify-content-between item-programm" data-nameProgramm="Infinity"><span>Infinity</span><span><b>от 3 000 ₽</b></span></li>
+                <li class="d-flex justify-content-between item-programm" data-nameProgramm="Solo"><span>Solo</span><span><b>от 6 500 ₽</b></span></li>
               </ul>
-              <button class="btn btn_none-style-btn text-green ml-2" id="btn-show-price-list">Посмотреть все программы</button>
+              <button class="btn btn_none-style-btn text-green ml-2 d-none" id="btn-show-price-list">Посмотреть все программы</button>
             </div>
             <div class="col-5 position-relative">
               <div class="servise__info-programs">
@@ -121,10 +124,10 @@
         </div>
       </div>
       <!-- contact ---------------------------------------->
-      <div class="section contact">
+      <div class="section contact" data-anchor="contact">
         <div class="container">
           <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-lg-6">
               <h2 class="title title_big home__title">Рады тебе</h2>
               <h3 class="title text-dark title_medium servise__sub-title mb-5">Контакты</h3>
               <div class="mb-5">
@@ -138,13 +141,13 @@
               </div>
               <button class="btn">Записатся</button>
             </div>
-            <div class="col-6 mt-5">
+            <div class="col-12 col-lg-6 mt-5">
               <div class="contact__info">
                 <h6 class="mb-3">
                   Вы ищите где расслабиться после
                   трудного дня в Самаре?
                 </h6>
-                <p>
+                <p class="d-none d-lg-block">
                   Мужской спа-салон «Эмбарго» предложит
                   на выбор 10 качественных spa программ,
                   обратите внимание на программу «Burlesque»
