--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
           <div class="d-flex align-items-center">
             <p class="text-green mr-3">Возраст</p> <p class="title title_medium" id="age">20</p>
           </div>
-          <button class="btn mt-5">Записатся</button>
+          <button class="btn mt-5 d-none d-md-block">Записатся</button>
         </div>
+        <button class="btn-mobile_girl mt-5 d-block d-md-none">Записатся</button>
       </div>
       <!-- servise ------------------------------------->
       <div class="section servise" data-anchor="servise">
@@ -139,7 +140,7 @@
                 <p class="text-green">Звоните по телефону:</p>
                 <h5>8 (927) 006-30-06</h5>
               </div>
-              <button class="btn">Записатся</button>
+              <button class="btn d-none d-md-block">Записатся</button>
             </div>
             <div class="col-12 col-lg-6 mt-5">
               <div class="contact__info">
@@ -147,6 +148,7 @@
                   Вы ищите где расслабиться после
                   трудного дня в Самаре?
                 </h6>
+                <button class="btn d-block d-md-none w-75 mx-auto">Записатся</button>
                 <p class="d-none d-lg-block">
                   Мужской спа-салон «Эмбарго» предложит
                   на выбор 10 качественных spa программ,
