--- a/index.html
+++ b/index.html
@@ -122,6 +122,63 @@
               </div>
             </div>
           </div>
+          <div class="row d-xl-none">
+            <div class="accordion" id="accordionExample">
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Foamy euphoria
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p>
+                      Самое быстрое наслаждение, заряженное
+                      на все 100. Начни рабочий день
+                      с небольшого отдыха.
+                    </p>
+                    <div class="description-price_mobile">
+                      <div>
+                        <p>C 1 девушкой/30минут</p>
+                        <p><b>1 900 руб.</b></p>
+                      </div>
+                      <button class="btn btn_green">Записатся</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Разворачиваемая панель #2
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingThree">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Разворачиваемая панель #3
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- contact ---------------------------------------->
@@ -140,7 +197,7 @@
                 <p class="text-green">Звоните по телефону:</p>
                 <h5>8 (927) 006-30-06</h5>
               </div>
-              <button class="btn d-none d-md-block">Записатся</button>
+              <button class="btn d-none d-lg-block">Записатся</button>
             </div>
             <div class="col-12 col-lg-6 mt-5">
               <div class="contact__info">
@@ -148,7 +205,7 @@
                   Вы ищите где расслабиться после
                   трудного дня в Самаре?
                 </h6>
-                <button class="btn d-block d-md-none w-75 mx-auto">Записатся</button>
+                <button class="btn d-block d-lg-none w-75 mx-auto">Записатся</button>
                 <p class="d-none d-lg-block">
                   Мужской спа-салон «Эмбарго» предложит
                   на выбор 10 качественных spa программ,
